[amazon] fix css and alignment

--- a/src/components/checkoutProduct/CheckoutProduct.css
+++ b/src/components/checkoutProduct/CheckoutProduct.css
@@ -2,6 +2,8 @@
   display: flex;
   margin-top: 20px;
   margin-bottom: 20px;
+  padding: 10px 0;
+  box-shadow: 0 1px 18px 0 rgba(64, 64, 64, 0.16);
 }
 
 .checkoutProduct__image {
@@ -14,13 +16,13 @@
   padding-left: 20px;
 }
 
-.checkoutProduct__rating{
-    display:flex;
+.checkoutProduct__rating {
+  display: flex;
 }
 
-.checkoutProduct__title{
-    font-size:17px;
-    font-weight: 800px;
+.checkoutProduct__title {
+  font-size: 17px;
+  font-weight: 800px;
 }
 
 .checkoutProduct__info > button {
